Updated <Overlay> to pass z-index prop for menu fix

--- a/client/src/shared/Header/Header.css
+++ b/client/src/shared/Header/Header.css
@@ -8,7 +8,7 @@ header {
     justify-content: space-between;
     align-items: center;
     background:#EEE;
-    z-index:25;
+    z-index:55;
 }
 
 @media screen and (max-width: 1023px) {
@@ -26,7 +26,7 @@ header {
         justify-content: space-between;
         align-items: center;
         background:#EEE;
-        z-index:35;
+        z-index:55;
         box-shadow: 0 0 20px rgba(0,0,0,0.5);
         transition: all 150ms;
     }
