--- a/client/src/shared/Sidebar/Sidebar.css
+++ b/client/src/shared/Sidebar/Sidebar.css
@@ -165,7 +165,7 @@
     .section {
         width: 100%;
         height:100%;
-        z-index: 50;
+        z-index: 60;
         overflow:hidden;
         padding:20px 0 64px 0;
         position: fixed;
